--- a/src/styles/componentStyle/input.scss
+++ b/src/styles/componentStyle/input.scss
@@ -4,7 +4,7 @@
   text-decoration: none;
   outline-style: none;
   text-indent: 5px;
-  padding: 4px 11px;
+  padding: 4px 4px;
   position: relative;
   width: 100%;
   height: 100%;
